<resources>
    <string name="app_name">My Story</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="login_succeed">your login succeed</string>
    <string name="login_failed">your login Failed !!, error Msg: %s</string>
    <string name="message_welcome_page">You can write anything of your story!</string>
    <string name="title_welcome_page">Welcome to My Story!</string>
    <string name="title_signup_page">Fill in your data below</string>
    <string name="email">Email</string>
    <string name="email_empty">Email Cannot Empty</string>
    <string name="email_pattern">Email pattern wrong</string>
    <string name="must_filled">Must be filled !!</string>
    <string name="password">Password</string>
    <string name="password_empty">Password Cannot Empty</string>
    <string name="password_length">Password Cannot Less than 6 Char</string>
    <string name="message_login_page">Please fill your data First</string>
    <string name="title_login_page">Ready for write your own story?</string>
    <string name="story_success">Your Story Successfully Uploaded</string>
    <string name="story_failed">Your Story Fail Uploaded !!, error Msg: %s</string>
    <string name="story_failed2">Your Story Fail Uploaded !!, something went wrong</string>
    <string name="name">Name :</string>
    <string name="copyright">© 2022 Ridenx Tech</string>
    <string name="greeting"> %1$s</string>
    <string name="greeting2"> %1$s, you in Detail view page now!!</string>
    <string name="greeting3"> %1$s, you can add your story here!!</string>
    <string name="description">Description :</string>
    <string name="logout">Logout</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="login_image">Login Image</string>
    <string name="signup_image">Signup Image</string>
    <string name="signup_failed">Signup Failed!!, error Msg: %s</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="story_image">Story Image</string>
    <string name="preview_image">preview image</string>
    <string name="hai">Hai, </string>
    <string name="blank_data">Data Not Found</string>
    <string name="strip">-</string>
    <string name="selectpict">Please Get Picture first !!</string>
    <string name="choose_pict">Choose a Picture</string>
    <string name="next">Next</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="retry">Retry !!</string>
    <string name="empty_location">The Data location is empty</string>
    <string name="title_activity_maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="no_data_location">No Data With Location !!</string>
    <string name="no_location_granted">No Location Granted </string>


</resources>
